<resources>
    <string name="app_name">Utiles Express</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Utiles Express</string>
    <string name="nav_header_subtitle">utiles.express@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_inicial">Menu Inicial</string>
    <string name="inicio_sesion">Iniciar Sesion</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="title_menu_ayuda">Menu Ayuda</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_ubicacion">Ubicacion</string>
    <string name="menu_busquedaPro">Busqueda Productos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia Sesion o Registrate</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="error_invalid_email">El Correo es invalido</string>
    <string name="error_invalid_password">La Contraseña es muy corta</string>
    <string name="error_incorrect_password">La Contraseña Esta Incorrecta</string>
    <string name="error_field_required">El Campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_busqueda_pro">Busqueda Productos</string>
    <string name="title_home">Ir al Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="title_activity_ubicacion">Ubicacion</string>
    <string name="title_activity_mapa_ubicacion">Mapa de la Ubicacion</string>
</resources>
