<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sesion"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/inicio_sesion" />
        <item
            android:id="@+id/nav_busquedaPro"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_busquedaPro" />
    </group>

    <item android:title="@string/title_menu_ayuda">
        <menu>
            <item
                android:id="@+id/nav_contacto"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_contacto" />
            <item
                android:id="@+id/nav_ubicacion"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_ubicacion" />
        </menu>
    </item>

</menu>
